[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dam-sdk-py"
version = "1.0.0"
description = "Official Python SDK for DAM System - Digital Asset Management API"
authors = [
    {name = "Aubrey Osenda", email = "aubrey@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
keywords = ["dam", "digital-asset-management", "file-upload", "api-client"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/aubreyosenda/dam_sdk_py"
Documentation = "https://github.com/aubreyosenda/dam_sdk_py/wiki"
"Bug Tracker" = "https://github.com/aubreyosenda/dam_sdk_py/issues"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3